--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 <body>
 
   <div class="content">
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-4/htmlcss1-img_writer-avatar.jpg" class="writer-img">
-    <h3 class="byline">Article By: Jane Dover</h3>
+    <img src="https://ibb.co/PhsTJD7" class="writer-img">
+    <h3 class="byline">Article By: r00t c0d3r</h3>
     <h1>How the Rise of Soccer in the US Is Changing the Face of Youth Sports</h1>
     <h2>The focus on soccer in youth sports programs is exploding nation-wide</h2>
     <p>When the first World Cup arrived in the US in the 90's everyone officially declared that soccer was it. Well it's taken 
