--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
 
   <div class="content">
-    <img src="https://ibb.co/PhsTJD7" class="writer-img">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8kTyv8AK5FIBr9CftcoH0bt6b8y_tZ4GcnQ&usqp=CAU" class="writer-img">
     <h3 class="byline">Article By: r00t c0d3r</h3>
     <h1>How the Rise of Soccer in the US Is Changing the Face of Youth Sports</h1>
     <h2>The focus on soccer in youth sports programs is exploding nation-wide</h2>
