--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   }
   
   .image {
-    background-image: url("https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-4/htmlcss1-img_soccer.jpeg");
+    background-image: url("https://ibb.co/zJs3zVq");
     background-size: cover;
     background-position: center;
     height: 300px;
