--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   }
   
   .image {
-    background-image: url("https://ibb.co/zJs3zVq");
+    background-image: url("https://imgur.com/a/3EbFKi6");
     background-size: cover;
     background-position: center;
     height: 300px;
