--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>The Rise of Soccer in The US</title>
+  <title>{+]EXPOSED BY R00T C0D3R[+]</title>
 
   <style>
     body {
