--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{+]EXPOSED BY R00T C0D3R[+]</title>
+  <title><marquee>{+]EXPOSED BY R00T C0D3R[+]</marquee></title>
 
   <style>
     body {
