--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
   </div>
 
   <div class="image">
+    <img src ="https://imgur.com/a/3EbFKi6"/>
     <p class="caption">The local semi- pro soccer team in Seattle, WA plays an international friendly</p>
   </div>
 
