--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <h3 class="byline">Article By: r00t c0d3r</h3>
     <h1>How is dating or having a relatioship with Dorota Szydelkiewicz</h1>
     <h2>A story of lies,treasons,manipulation and waste of money</h2>
-    <center><img src ="https://imgur.com/a/3EbFKi6"/></center>
+    <center><img src ="https://imgur.com/a/3EbFKi6"></center>
     <p>When the first World Cup arrived in the US in the 90's everyone officially declared that soccer was it. Well it's taken 
         it's time but we can definitely see the influence of soccer, especially women's soccer, across the US. This year, 3 million kids
       played in youth soccer leagues with 2/3 of those leagues for girls. In fact, in the 12-17 age range the MLS has surpassed the
