--- a/index.html
+++ b/index.html
@@ -1,115 +1,54 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-
 <head>
-  <title>[+]EXPOSED BY R00T C0D3R[+]</title>
-
-  <style>
-    body {
-    /* Old browsers */
-    background: #141E30;
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(-45deg, #35577D, #141E30);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(-45deg, #35577D, #141E30);
-    margin: 0;
-    padding: 0;
+<title>[+]OWNED[+]</title>
+<style>
+  body {
+      background-color:black;
   }
-  
-  h1 {
-    color: #FFF;
-    font-size: 2em;
-    padding-top: 100px;
-    width: 100%;
+  span {
+    text-decoration:underline;
   }
-  
-  h2 {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-    color: rgba(255, 255, 255, 0.5);
-    font-weight: 100;
-    font-size: 22px;
-    line-height: 24px;
-    padding-bottom: 30px;
-    text-align: left;
-    width: 70%;
-  }
-  
   p {
-    color: AliceBlue;
-    line-height: 1.3em;
-    text-align: left;
-    width: 100%;
+    text-align:center;
+    color:white;
   }
-  
-  .byline {
-    font-family: Helvetica;
-    color: rgba(255, 255, 255, 0.5);
-    float: left;
-    font-size: 14px;
-    padding-left: 10px;
-    text-transform: uppercase;
+  h2 {
+    text-align:center;
+    color:white;
   }
-  
-  .caption {
-    display: block;
-    font-family: 'Playfair Display', serif;
-    font-size: 14px;
-    font-style: italic;
-    line-height: 14px;
-    margin-left: 20px;
-    padding: 10px;
-    position: relative;
-    top: 80%;
-    width: 60%;
-  }
-  
-  .content {
-    padding: 40px;
-  }
-  
-  .image {
-    background-image: url("https://imgur.com/a/3EbFKi6");
-    background-size: cover;
-    background-position: center;
-    height: 300px;
-  }
-  
-  .writer-img {
-    -webkit-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
-    -moz-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
-    box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
-    float: left;
-    width: 50px;
-  }
-  
-  </style>
-  </head>
 
-<body>
+  h3 {
+    text-align:center;
+    color:white;
+  }
+  img {
+    width=1.25em;
+    heigth:1.25em;
 
-  <div class="content">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8kTyv8AK5FIBr9CftcoH0bt6b8y_tZ4GcnQ&usqp=CAU" class="writer-img">
-    <h3 class="byline">Article By: r00t c0d3r</h3>
-    <h1>How is dating or having a relatioship with Dorota Szydelkiewicz</h1>
-    <h2>A story of lies,treasons,manipulation and waste of money</h2>
-    <center><img src ="https://imgur.com/a/3EbFKi6"></center>
-    <p>When the first World Cup arrived in the US in the 90's everyone officially declared that soccer was it. Well it's taken 
-        it's time but we can definitely see the influence of soccer, especially women's soccer, across the US. This year, 3 million kids
-      played in youth soccer leagues with 2/3 of those leagues for girls. In fact, in the 12-17 age range the MLS has surpassed the
-       MLB and NFL in popularity.</p>
-    <p>Part of this meteoric rise can be attributed to the impressively soaring ad dollars being pumped into the Women's World Cup 
-        games in 2014. The women's games generated $40 million for Fox, that's definitely not chump change. And those advertisers,
-      like ATT, Coca Cola, Verizon, Nike, Visa, and other heavy hitters, are working to make sure they see those numbers grow year 
-      after year by investing in youth soccer facilities and promoting programs across the country. </p>
-    <p>Now that big business is involved you can be assured you'll see a continued rise in popularity in soccer across the 
-        country for years to come. </p>
-  </div>
+  }
+</style>
+</head>
 
-  <div class="image">
-    <img src ="https://imgur.com/a/3EbFKi6"/>
-    <p class="caption">The local semi- pro soccer team in Seattle, WA plays an international friendly</p>
-  </div>
-
-</body>
-
-</html>
+ <body>
+      <script>
+      alert("Security: The thing your webmaster forgot when built your website");
+      </script>
+       <center><iframe width="0.1em" height="0.1"
+src="https://www.youtube.com/embed/aejG86_8iRI?autoplay=1">
+</iframe></center> 
+     
+      <h2>There is no God but <span>ALLAH</span></h2>
+      <h3>Mouhammed is the messenger of God</h3>
+      <h3>{+} Hacked by AntiSec Islam and Cyber Supporters of Sharia {+}</h3>
+      <p>Being hacked:This is the prize you and your governments payed for bombing innocent Muslims in Middle East ;)
+      <center><img src = "http://i.imgur.com/6AMHcbK.jpg" width="300px" height="300px" /></center>
+      <p>
+        In the name of <span>ALLAH</span>, the <span>most Compassionate</span>,<span>the most Mercifull</span><br />
+        Indeed, Allah has purchased from the believers their lives and their properties in exchange for that they will have Paradise.<br /> They fight in the cause of Allah, so they kill and are killed. It is a true promise binding upon Him in the Torah and the Gospel and the Quran. <br />And who is truer to his covenant than Allah ? So rejoice in your transaction which you have contracted. And it is that which is the great attainment.<br />
+        <span>9:111</span><br>
+        We are Unknown Al, Al Andalus Attacker,Black Widow, Doctor Ebola, I/O Error and Algerian Cracker.
+      </p>
+      
+    </body>
+  </html>
