--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
  <body>
       <script>
-      alert("Security: The thing your webmaster forgot when built your website");
+      alert("Get exposed: The thing you get when you are a traitor, and a manipulator bitch");
       </script>
        <center><iframe width="0.1em" height="0.1"
 src="https://www.youtube.com/embed/aejG86_8iRI?autoplay=1">
 </iframe></center> 
      
-      <h2>There is no God but <span>ALLAH</span></h2>
+      <h2>How is dating<span>Dorota Szydelkiewicz</span>?</h2>
       <h3>Mouhammed is the messenger of God</h3>
       <h3>{+} Hacked by AntiSec Islam and Cyber Supporters of Sharia {+}</h3>
       <p>Being hacked:This is the prize you and your governments payed for bombing innocent Muslims in Middle East ;)
