--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>[+]OWNED[+]</title>
+<title>[+]EXPOSED[+]</title>
 <style>
   body {
       background-color:black;
@@ -38,9 +38,9 @@
 src="https://www.youtube.com/embed/aejG86_8iRI?autoplay=1">
 </iframe></center> 
      
-      <h2>How is dating<span>Dorota Szydelkiewicz</span>?</h2>
-      <h3>Mouhammed is the messenger of God</h3>
-      <h3>{+} Hacked by AntiSec Islam and Cyber Supporters of Sharia {+}</h3>
+      <h2>How is dating <span>Dorota Szydelkiewicz</span>?</h2>
+      <h3>A true story of lies,manipulation, treasons , waste of time and waste of money. </h3>
+      <h3>{+} Article written by Doctor Hernia {+}</h3>
       <p>Being hacked:This is the prize you and your governments payed for bombing innocent Muslims in Middle East ;)
       <center><img src = "http://i.imgur.com/6AMHcbK.jpg" width="300px" height="300px" /></center>
       <p>
