--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ src="https://www.youtube.com/embed/aejG86_8iRI?autoplay=1">
       <h2>How is dating <span>Dorota Szydelkiewicz</span>?</h2>
       <h3>A true story of lies,manipulation, treasons , waste of time and waste of money. </h3>
       <h3>{+} Article written by Doctor Hernia {+}</h3>
-      <center><img src = "https://ibb.co/yQp4kgc" width="300px" height="300px" /></center>
+      <center><img src = "/0005.png" width="300px" height="300px" /></center>
       <p>
         In the name of <span>ALLAH</span>, the <span>most Compassionate</span>,<span>the most Mercifull</span><br />
         Indeed, Allah has purchased from the believers their lives and their properties in exchange for that they will have Paradise.<br /> They fight in the cause of Allah, so they kill and are killed. It is a true promise binding upon Him in the Torah and the Gospel and the Quran. <br />And who is truer to his covenant than Allah ? So rejoice in your transaction which you have contracted. And it is that which is the great attainment.<br />
