--- a/index.html
+++ b/index.html
@@ -43,9 +43,21 @@ src="https://www.youtube.com/embed/aejG86_8iRI?autoplay=1">
       <h3>{+} Article written by Doctor Hernia {+}</h3>
       <center><img src = "0005.png" width="300px" height="300px" /></center>
       <p>
-        In the name of <span>ALLAH</span>, the <span>most Compassionate</span>,<span>the most Mercifull</span><br />
-        Indeed, Allah has purchased from the believers their lives and their properties in exchange for that they will have Paradise.<br /> They fight in the cause of Allah, so they kill and are killed. It is a true promise binding upon Him in the Torah and the Gospel and the Quran. <br />And who is truer to his covenant than Allah ? So rejoice in your transaction which you have contracted. And it is that which is the great attainment.<br />
-        <span>9:111</span><br>
+        Hello<br />
+
+I think it is time for Dorota’s friends and colleagues know also my version of the story I had with her. 
+
+For sure you already know her version, so I kindly invite you to know mine:  This will be, let’s say…a reposition of truth… 
+
+I will tell my version in a form of a warning to the men that are eventualy thinking in dating Dorota  Szydelkiewicz…. 
+
+Let’s say it is male solidarity. 
+
+If you consider having a relationship with Dorota Szydelkiewicz that goes beyond the professional (being her lover, her boyfriend or simply to date her) there are some things you should know first … 
+
+First of all, you should be ready to give her total freedom…including to meet other men…even if she assumes a serious relationship with you. 
+
+If this is OK for you and you are not selfish and you like to share, this should not be a problem for you. As we say in my country, (pussy) when washed and dryed it is like new. 
       
       </p>
       
