--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@ src="https://www.youtube.com/embed/aejG86_8iRI?autoplay=1">
       <h3>A true story of lies,manipulation, treasons , waste of time and waste of money. </h3>
       <h3>{+} Article written by Doctor Hernia {+}</h3>
       <center><img src = "0005.png" width="300px" height="300px" /></center>
-      <p>
-        Hello<br />
+      <p>Hello<br/>
 
 I think it is time for Dorota’s friends and colleagues know also my version of the story I had with her. 
 
