--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
       <script>
       alert("Get exposed: The thing you get when you are a traitor, and a manipulator bitch");
       </script>
-       <center> <audio controls autoplay>
-  <source src="a.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio> </center> 
+       
      
       <h2>How is dating <span>Dorota Szydelkiewicz</span>?</h2>
       <h3>A true story of lies,manipulation, treasons , waste of time and waste of money. </h3>
       <h3>{+} Article written by Doctor Hernia {+}</h3>
+      <h3>You can hear this song while you read the exposed :) </h3>
+      <center> <audio controls autoplay>
+          <source src="a.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+      </audio> </center> 
+   
       <center><img src = "0005.png" width="300px" height="300px" /></center>
       <p>Hello<br/>
 
