--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>How is dating <span>Dorota Szydelkiewicz</span>?</h2>
       <h3>A true story of lies,manipulation, treasons , waste of time and waste of money. </h3>
       <h3>{+} Article written by Doctor Hernia {+}</h3>
-      <h3>You can hear this song while you read the exposed :) </h3>
+      <h3>You can hear this song while you read this re-establishment of the honor :) </h3>
       <center> <audio controls autoplay>
           <source src="a.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
