--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@ I think it is time for Dorota’s friends and colleagues know also my version of
 
 For sure you already know her version, so I kindly invite you to know mine:  This will be, let’s say…a reposition of truth… <br/>
 
-I will tell my version in a form of a warning to the men that are eventualy thinking in dating Dorota  Szydelkiewicz….<br/> 
-
-Let’s say it is male solidarity. 
+I will tell my version in a form of a warning to the men that are eventualy thinking in dating Dorota  Szydelkiewicz…Let’s say it is male solidarity. <br/>
 
 If you consider having a relationship with Dorota Szydelkiewicz that goes beyond the professional (being her lover, her boyfriend or simply to date her) there are some things you should know first … 
 
