--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ For sure you already know her version, so I kindly invite you to know mine:  Thi
 
 I will tell my version in a form of a warning to the men that are eventualy thinking in dating Dorota  Szydelkiewicz…Let’s say it is male solidarity. <br/>
 
-If you consider having a relationship with Dorota Szydelkiewicz that goes beyond the professional (being her lover, her boyfriend or simply to date her) there are some things you should know first … 
+If you consider having a relationship with Dorota Szydelkiewicz that goes beyond the professional <br/>(being her lover, her boyfriend or simply to date her) there are some things you should know first … 
 
 First of all, you should be ready to give her total freedom…including to meet other men…even if she assumes a serious relationship with you. 
 
