--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ I will tell my version in a form of a warning to the men that are eventualy thin
 
 If you consider having a relationship with Dorota Szydelkiewicz that goes beyond the professional <br/>(being her lover, her boyfriend or simply to date her) there are some things you should know first … 
 
-First of all, you should be ready to give her total freedom…including to meet other men…even if she assumes a serious relationship with you. 
+First of all, you should be ready to give her total freedom…including to meet other men…even if she assumes a serious relationship with you.<br/> 
 
 If this is OK for you and you are not selfish and you like to share, this should not be a problem for you. As we say in my country, (pussy) when washed 
 and dryed it is like new. <br/>
