--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ I do not know how Polish men reacts, but when a man of my country hears somethin
      But do not worry, if you have no money enough, she will let you know when she brokes up with you (normally through whatsapp or FB messenger), <br/>
      two days after ask you how much money you earn per month …
    </p>
+   <center><img src = "d.jpg" width="273px" height="528px" /></center>
       
     </body>
   </html>
