--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@ I do not know how Polish men reacts, but when a man of my country hears somethin
      two days after ask you how much money you earn per month …
    </p>
    <center><img src = "d.jpg" width="273px" height="528px" /></center>
-      
+   <p>
+   But even after this small warning,you get involved with Dorota Szydelkiewicz, let me tell you how the things will happen: First of all, for sure you will meet <br/>
+     her on FB dating groups, or Tinder. On Tinder you can recognize her by this photo:
+        <center><img src = "e.jpg" width="273px" height="528px" /></center>
+
+   </p>
     </body>
   </html>
